# DEZoocamp2026

./: .gitignore  README.md
01_docker-terraform/pipeline/: .gitignore  Dockerfile  ingest_data.py  ingest_data_new.py  mynotebook.ipynb  pipeline.py  pyproject.toml  sql_query_homework.txt
01_docker-terraform/terraform/: main.tf  variables.tf
01_docker-terraform/test_python/: .gitignore
02_workflow-orchestration/: .gitignore  02_python.yaml  05_postgres_taxi_scheduled.yaml  06_gcp_kv.yaml  09_gcp_taxi_scheduled.yaml  HOMEWORK WORKFLOW ORCHESTRATION.docx  docker-compose.yaml  ~$MEWORK WORKFLOW ORCHESTRATION.docx
03_datawarehouse/: .gitignore  README.md  load_yellow_taxi_data.py  pyproject.toml
03_datawarehouse/homework/: HOMEWORK WEEK3.docx
04_analytics-engineering/: .gitignore  ingest_data.py
04_analytics-engineering/homework/: Homework_week4.docx  README.md  ingest_data.py  ~$mework_week4.docx
04_analytics-engineering/taxi_rides_ny/: ingest_duckdb.py
05_data_platform/my-dlt-pipeline/: open_library_pipeline.py
05_data_platform/taxi-homework-pipeline/: README.md  dlt_workspace_dashboard.html  main.py  pyproject.toml  taxi_homework_pipeline.py
05_data_platform/test-dlt-pipeline/: main.py  open_library_pipeline.py  pyproject.toml
06_batch/: .gitignore  03_test.ipynb  05_taxi_schema.ipynb  06_spark_sql.ipynb  07_groupby_join.ipynb  08_rdds.ipynb  download_data.sh  homework.ipynb  pyproject.toml
07_streaming/codespace_examaples/: test.py
07_streaming/workshop/: README.md  consumer.py  docker-compose.yaml  producer.py
(+10 files in other folders)
