[project]
name = "taxi-homework-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "dlt[workspace]>=1.22.1",
    "ibis-framework[duckdb]>=12.0.0",
    "marimo>=0.20.2",
    "numpy>=2.4.2",
]
